--- a/style.css
+++ b/style.css
@@ -51,3 +51,72 @@
 	border-radius: 20px;
 
 }
+  .sayfa
+{
+    width: 700px;
+    margin: 0 auto;
+}
+.sliderKonum{
+    align:center;
+    width: 200px;
+    height: 400px;
+    overflow: hidden;
+}
+.img-1{left: 0px;}
+.img-2{left: 500px;}
+.img-3{left: 500px;}
+.sliderKonum > 
+.slider
+{
+      position: absolute;
+      left:0px;
+      width: 2800px;
+      height: 400px;
+      -webkit-animation-duration: 10s;
+      -webkit-animation-name: sliders;
+      -webkit-animation-iteration-count:infinite;
+      -moz-animation-duration: 10s;
+      -moz-animation-name: sliders;
+      -moz-animation-iteration-count:infinite;
+      -ms-animation-duration: 10s;
+      -ms-animation-name: sliders;
+      -ms-animation-iteration-count:infinite;
+      animation-duration: 10s;
+      animation-iteration-count:infinite;
+    }
+      @-webkit-keyframes sliders
+{
+      0% {left:0px;}
+      10% {left:0px;}
+      20% {left:-700px;}
+      30% {left:-700px;}
+      40% {left:-1400px;}
+      50% {left:-1400px;}
+}
+    @-moz-keyframes slider
+{
+      0% {left:0px;}
+      10% {left:0px;}
+      20% {left:-700px;}
+      30% {left:-700px;}
+      40% {left:-1400px;}
+      50% {left:-1400px;}
+}
+    @-ms-keyframes sliders 
+{
+      0% {left:0px;}
+      10% {left:0px;}
+      20% {left:-700px;}
+      30% {left:-700px;}
+      40% {left:-1400px;}
+      50% {left:-1400px;}
+}
+    @keyframes sliders
+{
+      0% {left:0px;}
+      10% {left:0px;}
+      20% {left:-700px;}
+      30% {left:-700px;}
+      40% {left:-1400px;}
+      50% {left:-1400px;}
+    }
