--- a/style.css
+++ b/style.css
@@ -56,7 +56,8 @@
     width: 700px;
     margin: 0 auto;
 }
-.sliderKonum{
+.sliderKonum
+{
     align:center;
     width: 200px;
     height: 400px;
@@ -83,7 +84,7 @@
       -ms-animation-iteration-count:infinite;
       animation-duration: 10s;
       animation-iteration-count:infinite;
-    }
+}
       @-webkit-keyframes sliders
 {
       0% {left:0px;}
@@ -119,4 +120,31 @@
       30% {left:-700px;}
       40% {left:-1400px;}
       50% {left:-1400px;}
-    }
+}
+.haber1
+{
+    border-radius: 50px;
+    height: 800px;
+    width: 860px;
+    float: left;
+    background-color: white;
+    text-align: center;
+
+}
+.haber2
+{
+    border-radius: 50px;
+    height: 800px;
+    width: 860px;
+    float:right;
+    background-color: white;
+    text-align: center;
+}
+.haber3
+{
+    border-radius: 50px;
+    height: 700px;
+    width: 860px;
+    background-color: white;
+    text-align: center;
+}
