--- a/websayfam-master/style.css
+++ b/websayfam-master/style.css
@@ -1,4 +1,3 @@
-body {cursor: url('rainbow.png'), default;}
 
 .altkisim 
 { 
@@ -25,7 +24,7 @@ body {cursor: url('rainbow.png'), default;}
     background-image: arkaplan;
 
 }
-.paragraf1
+/*.paragraf1
 {
 	width: 1400px;
 	height: 250px;
@@ -36,7 +35,23 @@ body {cursor: url('rainbow.png'), default;}
   font-weight: bold;
 
 }
-.paragraf2
+*/
+.paragraf1
+{
+border-radius: 36px;
+  background-image: -moz-linear-gradient( 90deg, rgb(0,176,255) 0%, rgb(0,135,255) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgb(0,176,255) 0%, rgb(0,135,255) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgb(0,176,255) 0%, rgb(0,135,255) 100%);
+  box-shadow: 0px 20px 46.5px 3.5px rgba(0, 0, 0, 0.5),inset 0px 1px 68.68px 32.32px rgba(0, 0, 0, 0.13);
+  position: center;
+  left: 93px;
+  top: 1800px;
+  width: 1300px;
+  height: 200px;
+  z-index: 3;
+}
+  
+/*.paragraf2
 {
 	width: 1300px;
 	height: 350px;
@@ -47,6 +62,22 @@ body {cursor: url('rainbow.png'), default;}
   font-weight: bold;
 	
 }
+*/
+.paragraf2
+{
+border-radius: 36px;
+  background-image: -moz-linear-gradient( 90deg, rgb(0,176,255) 0%, rgb(0,135,255) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgb(0,176,255) 0%, rgb(0,135,255) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgb(0,176,255) 0%, rgb(0,135,255) 100%);
+  box-shadow: 0px 20px 46.5px 3.5px rgba(0, 0, 0, 0.5),inset 0px 1px 68.68px 32.32px rgba(0, 0, 0, 0.13);
+  position: center;
+  left: 93px;
+  top: 1800px;
+  width: 1600px;
+  height: 350px;
+  z-index: 3;
+}
+/*
 .paragraf3
 {
 	width: 1150px;
@@ -57,6 +88,21 @@ body {cursor: url('rainbow.png'), default;}
   font-family: monospace;
   font-weight: bold;
 
+}
+*/
+.paragraf3
+{
+border-radius: 36px;
+  background-image: -moz-linear-gradient( 90deg, rgb(0,176,255) 0%, rgb(0,135,255) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgb(0,176,255) 0%, rgb(0,135,255) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgb(0,176,255) 0%, rgb(0,135,255) 100%);
+  box-shadow: 0px 20px 46.5px 3.5px rgba(0, 0, 0, 0.5),inset 0px 1px 68.68px 32.32px rgba(0, 0, 0, 0.13);
+  position: center;
+  left: 93px;
+  top: 1800px;
+  width: 1300px;
+  height: 400px;
+  z-index: 3;
 }
   .sayfa
 {
@@ -129,7 +175,7 @@ body {cursor: url('rainbow.png'), default;}
       40% {left:-1400px;}
       50% {left:-1400px;}
 }
-.haber1
+/*.haber1
 {
     border-radius: 50px;
     height: 800px;
@@ -138,9 +184,24 @@ body {cursor: url('rainbow.png'), default;}
     text-align: justify;
     margin: 25px;
     padding: 10px;
+}
+*/
+.haber1 
+{
+  border-radius: 36px;
+  background-image: -moz-linear-gradient( 90deg, rgb(0,176,255) 0%, rgb(0,135,255) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgb(0,176,255) 0%, rgb(0,135,255) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgb(0,176,255) 0%, rgb(0,135,255) 100%);
+  box-shadow: 0px 20px 46.5px 3.5px rgba(0, 0, 0, 0.5),inset 0px 1px 68.68px 32.32px rgba(0, 0, 0, 0.13);
+  position: absolute;
+  left: 60px;
+  top: 800px;
+  width: 860px;
+  height: 800px;
+  z-index: 3;
 
 }
-.haber2
+/*.haber2
 {
     border-radius: 50px;
     height: 800px;
@@ -150,7 +211,23 @@ body {cursor: url('rainbow.png'), default;}
     margin: 25px;
     padding: 10px;
 }
-.haber3
+*/
+.haber2
+{
+  border-radius: 36px;
+  background-image: -moz-linear-gradient( 90deg, rgb(0,176,255) 0%, rgb(0,135,255) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgb(0,176,255) 0%, rgb(0,135,255) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgb(0,176,255) 0%, rgb(0,135,255) 100%);
+  box-shadow: 0px 20px 46.5px 3.5px rgba(0, 0, 0, 0.5),inset 0px 1px 68.68px 32.32px rgba(0, 0, 0, 0.13);
+  position: absolute;
+  right:60px;
+  top: 800px;
+  width: 860px;
+  height: 800px;
+  z-index: 3;
+
+}
+/*.haber3
 {
     border-radius: 50px;
     height: 700px;
@@ -159,7 +236,30 @@ body {cursor: url('rainbow.png'), default;}
     margin: 25px;
     padding: 10px;
 }
+*/
+.haber3
+{
+  border-radius: 36px;
+  background-image: -moz-linear-gradient( 90deg, rgb(0,176,255) 0%, rgb(0,135,255) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgb(0,176,255) 0%, rgb(0,135,255) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgb(0,176,255) 0%, rgb(0,135,255) 100%);
+  box-shadow: 0px 20px 46.5px 3.5px rgba(0, 0, 0, 0.5),inset 0px 1px 68.68px 32.32px rgba(0, 0, 0, 0.13);
+  position: center;
+  left: 93px;
+  top: 1800px;
+  width: 860px;
+  height: 600px;
+  z-index: 3;
+
+}
 .program1
 {
   float:left;
+}
+.arkaplan
+{
+  background-image: -moz-linear-gradient( 90deg, rgb(255,0,0) 0%, rgb(145,0,0) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgb(255,0,0) 0%, rgb(145,0,0) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgb(255,0,0) 0%, rgb(145,0,0) 100%);
+  height: 2300px;
 }
