--- a/websayfam-master/style.css
+++ b/websayfam-master/style.css
@@ -263,3 +263,7 @@ border-radius: 36px;
   background-image: -ms-linear-gradient( 90deg, rgb(255,0,0) 0%, rgb(145,0,0) 100%);
   height: 2300px;
 }
+.program2
+{
+  float: right;
+}
