--- a/websayfam-master/style.css
+++ b/websayfam-master/style.css
@@ -1,4 +1,4 @@
-
+              
 .altkisim 
 { 
 	height: 500x; 
@@ -47,8 +47,9 @@ border-radius: 36px;
   left: 93px;
   top: 1800px;
   width: 1300px;
-  height: 200px;
+  height: 150px;
   z-index: 3;
+  padding: 2px;
 }
   
 /*.paragraf2
@@ -73,9 +74,10 @@ border-radius: 36px;
   position: center;
   left: 93px;
   top: 1800px;
-  width: 1600px;
-  height: 350px;
+  width: 1300px;
+  height: 300px;
   z-index: 3;
+  padding: 2px;
 }
 /*
 .paragraf3
@@ -90,7 +92,7 @@ border-radius: 36px;
 
 }
 */
-.paragraf3
+.paragraf4
 {
 border-radius: 36px;
   background-image: -moz-linear-gradient( 90deg, rgb(0,176,255) 0%, rgb(0,135,255) 100%);
@@ -103,6 +105,7 @@ border-radius: 36px;
   width: 1300px;
   height: 400px;
   z-index: 3;
+  padding: 2px;
 }
   .sayfa
 {
@@ -199,6 +202,7 @@ border-radius: 36px;
   width: 860px;
   height: 800px;
   z-index: 3;
+  padding: 2px;
 
 }
 /*.haber2
@@ -225,6 +229,7 @@ border-radius: 36px;
   width: 860px;
   height: 800px;
   z-index: 3;
+  padding: 2px;
 
 }
 /*.haber3
@@ -250,7 +255,6 @@ border-radius: 36px;
   width: 860px;
   height: 600px;
   z-index: 3;
-
 }
 .program1
 {
@@ -301,4 +305,161 @@ background-color:#b4ef85;}
 @keyframes ball {
     from {top: 0px;}
     to {top: 350px;}
+}
+
+--------------------------
+
+body {
+  background: #00b4ff;
+  color: #333;
+  font: 100% Arial, Sans Serif;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+#background-wrap {
+    bottom: 0;
+  left: 0;
+  padding-top: 50px;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: -1;
+}
+
+/* KEYFRAMES */
+
+@-webkit-keyframes animateCloud {
+    0% {
+        margin-left: -1000px;
+    }
+    100% {
+        margin-left: 100%;
+    }
+}
+
+@-moz-keyframes animateCloud {
+    0% {
+        margin-left: -1000px;
+    }
+    100% {
+        margin-left: 100%;
+    }
+}
+
+@keyframes animateCloud {
+    0% {
+        margin-left: -1000px;
+    }
+    100% {
+        margin-left: 100%;
+    }
+}
+
+/* ANIMATIONS */
+
+.x1 {
+  -webkit-animation: animateCloud 35s linear infinite;
+  -moz-animation: animateCloud 35s linear infinite;
+  animation: animateCloud 35s linear infinite;
+  
+  -webkit-transform: scale(0.65);
+  -moz-transform: scale(0.65);
+  transform: scale(0.65);
+}
+
+.x2 {
+  -webkit-animation: animateCloud 20s linear infinite;
+  -moz-animation: animateCloud 20s linear infinite;
+  animation: animateCloud 20s linear infinite;
+  
+  -webkit-transform: scale(0.3);
+  -moz-transform: scale(0.3);
+  transform: scale(0.3);
+}
+
+.x3 {
+  -webkit-animation: animateCloud 30s linear infinite;
+  -moz-animation: animateCloud 30s linear infinite;
+  animation: animateCloud 30s linear infinite;
+  
+  -webkit-transform: scale(0.5);
+  -moz-transform: scale(0.5);
+  transform: scale(0.5);
+}
+
+.x4 {
+  -webkit-animation: animateCloud 18s linear infinite;
+  -moz-animation: animateCloud 18s linear infinite;
+  animation: animateCloud 18s linear infinite;
+  
+  -webkit-transform: scale(0.4);
+  -moz-transform: scale(0.4);
+  transform: scale(0.4);
+}
+
+.x5 {
+  -webkit-animation: animateCloud 25s linear infinite;
+  -moz-animation: animateCloud 25s linear infinite;
+  animation: animateCloud 25s linear infinite;
+  
+  -webkit-transform: scale(0.55);
+  -moz-transform: scale(0.55);
+  transform: scale(0.55);
+}
+
+/* OBJECTS */
+
+.cloud {
+  background: #fff;
+  background: -moz-linear-gradient(top,  #fff 5%, #f1f1f1 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(5%,#fff), color-stop(100%,#f1f1f1));
+  background: -webkit-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+  background: -o-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+  background: -ms-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+  background: linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff', endColorstr='#f1f1f1',GradientType=0 );
+  
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  border-radius: 100px;
+  
+  -webkit-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+
+  height: 120px;
+  position: relative;
+  width: 350px;
+}
+
+.cloud:after, .cloud:before {
+    background: #fff;
+  content: '';
+  position: absolute;
+  z-indeX: -1;
+}
+
+.cloud:after {
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  border-radius: 100px;
+
+  height: 100px;
+  left: 50px;
+  top: -50px;
+  width: 100px;
+}
+
+.cloud:before {
+  -webkit-border-radius: 200px;
+  -moz-border-radius: 200px;
+  border-radius: 200px;
+
+  width: 180px;
+  height: 180px;
+  right: 50px;
+  top: -90px;
 }
